cicd/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: unixpense-svc
  namespace: unixpense
  labels:
    app: unixpense-svc
spec:
  selector:
    matchLabels:
      app: unixpense-svc
  replicas: 1
  strategy:
      type: RollingUpdate
      rollingUpdate:
         maxSurge: 0
         maxUnavailable: 1
  template:
    metadata:
      labels:
        app: unixpense-svc
    spec:
      securityContext:
        runAsUser: 1000
      containers:
      - name: unixpense-svc
        image: nikolayrk/unixpense-svc:latest
        resources:
          requests:
            cpu: 150m
            memory: 150Mi
          limits:
            cpu: 350m
            memory: 350Mi
