cicd/manifests/jenkins-agent.yaml
apiVersion: v1
kind: Pod
metadata:
  namespace: unixpense
spec:
  containers:
  - name: kaniko
    image: gcr.io/kaniko-project/executor:debug
    command:
    - cat
    tty: true
    resources:
      requests:
        cpu: 500m
        memory: 500Mi
      limits:
        cpu: 1500m
        memory: 1500Mi
    volumeMounts:
    - name: kaniko-secret
      mountPath: /kaniko/.docker
  - name: kubectl
    image: quay.io/clastix/kubectl:v1.24
    command:
    - cat
    tty: true
    resources:
      requests:
        cpu: 300m
        memory: 300Mi
      limits:
        cpu: 500m
        memory: 500Mi
  volumes:
  - name: kaniko-secret
    secret:
      secretName: dockerconfig
      items:
      - key: .dockerconfigjson
        path: config.json
