cicd/manifests/mariadb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: unixpense-db
  namespace: unixpense
  labels:
    app: unixpense-db
spec:
  selector:
    matchLabels:
      app: unixpense-db
  revisionHistoryLimit: 0
  replicas: 1
  strategy:
      type: RollingUpdate
      rollingUpdate:
         maxSurge: 1
         maxUnavailable: 1
  template:
    metadata:
      labels:
        app: unixpense-db
    spec:
      volumes:
      - name: mariadb-volume
        nfs:
          server: $MARIADB_NFS_SERVER
          path: $MARIADB_NFS_PATH
      securityContext:
        runAsUser: 1000
      containers:
      - name: mariadb
        image: mariadb:latest
        resources:
          requests:
            cpu: "1"
            memory: 512Mi
          limits:
            cpu: "2"
            memory: 1Gi
        ports:
        - containerPort: 3306
          name: mariadb-port
        volumeMounts:
        - mountPath: /var/lib/mysql
          name: mariadb-volume
