cicd/manifests/mariadb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mariadb-service
  namespace: unixpense
  labels:
    app: unixpense-svc
spec:
  selector:
    app: unixpense-svc
  ports:
  - name: mariadb
    port: 3306
    targetPort: mariadb-port
    protocol: TCP
