cicd/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: unixpense-svc-service
  namespace: unixpense
  labels:
    app: unixpense-svc
spec:
  selector:
    app: unixpense-svc
  ports:
  - name: http
    port: $PORT
    targetPort: $PORT
    protocol: TCP
