cicd/manifests/auth-network.yaml
apiVersion: v1
kind: Service
metadata:
  name: unixpense-auth-service
  namespace: unixpense
spec:
  selector:
    app: unixpense-auth
  ports:
  - port: 4180
    protocol: TCP
    targetPort: 4180
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: unixpense-auth-ingress
  namespace: unixpense
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "2000m"
    nginx.ingress.kubernetes.io/proxy-buffer-size: "8k"
    nginx.ingress.kubernetes.io/proxy-buffers-number: '4'
  labels:
    app: unixpense-auth
spec:
  ingressClassName: nginx
  rules:
  - host: $UNIXPENSE_HOST
    http:
      paths:
      - path: $UNIXPENSE_HOST_PREFIX/oauth2
        pathType: Prefix
        backend:
          service:
            name: unixpense-auth-service
            port:
              number: 4180
