cicd/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: unixpense
  name: unixpense-svc-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
  - host: $UNIXPENSE_URI
    http:
      paths:
      - path: /unixpense($|/)(.*) # https://stackoverflow.com/a/59786485
        pathType: Prefix
        backend:
          service:
            name: unixpense-svc-service
            port:
              number: $PORT
